# lec-pro-1

./: .gitignore  .gitmodules  CMakeLists.txt  sorting.c
02/: line-interest.c
03/: ascii.c  easter.c  euklid.c  factorial.c  limits.c  multitable.c  resistance.c
04/: bigdivision.c  euklid_ptr.c  multitable_array.c  multitable_array_ptr.c
05/: number_conversion.c  number_prompts.c  string_manipulation.c  to_the_power_of.c
06/: file_cards.c  random_num_game.c
